--- a/activity/package.json
+++ b/activity/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.11.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
